# batched

./: .gitignore  LICENSE.md  Makefile  README.md  k6.ts  pyproject.toml  ruff.toml  test_batched.ipynb
.github/workflows/: lint.yml  release.yml  test.yml
batch/: __init__.py  batch_config.py  batch_generator.py  batch_processor.py  decorator.py  logger.py  types.py  utils.py
batch/aio/: __init__.py  batch_generator.py  batch_processor.py
batch/aio/inference/: __init__.py  model_batch_processor.py
batch/asyncio/: __init__.py  batch_generator.py  batch_processor.py
batch/asyncio_/: batch_generator.py  batch_processor.py
batch/inference/: __init__.py  asyncio_.py  batch_processor.py  helper.py  model_batch_processor.py  thread_.py  types.py
batch/thread_/: batch_generator.py  batch_processor.py
batched/: __init__.py  batch_generator.py  batch_processor.py  decorator.py  types.py  utils.py
batched/aio/: __init__.py  batch_generator.py  batch_processor.py
batched/aio/inference/: model_batch_processor.py
batched/inference/: helper.py  model_batch_processor.py
benchmarks/: benchmark.ipynb
examples/: benchmark.ipynb  fastapi.ipynb  general_batching.ipynb  inference_batching.ipynb  sentece_transformers.ipynb  test.ipynb
tests/: batch_generator_test.py  batch_processor_test.py
tests/aio/: aio_batch_generator_test.py  aio_batch_processor_test.py
tests/aio/inference/: aio_inference_batch_processor_test.py
tests/asyncio_/: batch_processor_test.ipynb  batch_processor_test.py
tests/inference/: helper_test.py  inference_batch_processor_test.py
