[project]
name = "batched"
version = "0.1.5"
description = "Batched is a flexible and efficient batch processing library implemented in Python. It supports asynchronous batch processing with dynamic batching and prioritization."
authors = [
    { name = "Mixedbread", email = "support@mixedbread.ai" },
    { name = "Julius Lipp", email = "julius@mixedbread.ai" },
    { name = "Rui Huang", email = "rui@mixedbread.ai" },
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
    "torch>=2.0.0",
    "numpy>=1.26.4",
]

[tool.setuptools.packages.find]
include = ["batched", "batched.*"]

[tool.setuptools.package-data]
batch = ["py.typed"]
